--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
             "Aiman\\SimpAuth\\": "src/"
         }
     },
-    "minimum-stability": "",
+    "minimum-stability": "stable",
     "require": {}
 }
