--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "aiman/simp-auth",
     "description": "Basic auth using php",
+    "version": "1.0.0",
     "autoload": {
         "psr-4": {
             "Aiman\\SimpAuth\\": "src/"
